--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,105 @@
---index-url https://pypi.python.org/simple/
-
--e .
+ansible==2.8.5
+appdirs==1.4.3
+asn1crypto==0.24.0
+astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
+backcall==0.1.0
+bcrypt==3.1.7
+bigsuds==1.0.6
+black==19.3b0
+certifi==2019.9.11
+cffi==1.12.3
+chardet==3.0.4
+ciscoconfparse==1.4.7
+Click==7.0
+colorama==0.4.1
+coverage==4.5.4
+cryptography==2.7
+dataclasses==0.6
+decorator==4.4.0
+dnspython==1.16.0
+entrypoints==0.3
+f5-icontrol-rest==1.3.13
+f5-sdk==3.0.21
+filelock==3.0.12
+flake8==3.7.8
+future==0.17.1
+idna==2.8
+importlib-metadata==0.23
+ipdb==0.12.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+isort==4.3.21
+jedi==0.15.1
+Jinja2==2.10.1
+jsonrpclib==0.1.7
+jsonschema==3.0.2
+junos-eznc==2.2.1
+lazy-object-proxy==1.4.2
+lxml==4.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mock==3.0.5
+more-itertools==7.2.0
+mypy-extensions==0.4.1
+-e git+https://github.com/napalm-automation/napalm@774ec63e16d5224634805f680a75880fa3961530#egg=napalm
+ncclient==0.6.6
+netaddr==0.7.19
+netmiko==2.4.2
+nornir==2.2.0
+nxapi-plumbing==0.5.2
+packaging==19.1
+paramiko==2.6.0
+parso==0.5.1
+passlib==1.7.1
+pep8==1.7.1
+pexpect==4.7.0
+pickleshare==0.7.5
+pluggy==0.13.0
+ply==3.11
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+py==1.8.0
+pyasn1==0.4.7
+pycodestyle==2.5.0
+pycparser==2.19
+pycryptodomex==3.9.0
+pydantic==0.18.2
+pydocstyle==4.0.1
+pyeapi==0.8.2
+pyflakes==2.1.1
+pygal==2.4.0
+Pygments==2.4.2
+pyIOSXR==0.53
+pylama==7.7.1
+pylint==2.3.1
+PyNaCl==1.3.0
+pynetbox==4.0.7
+pyntc==0.0.9
+pynxos==0.0.5
+pyparsing==2.4.2
+pyrsistent==0.15.4
+pyserial==3.4
+pysmi==0.3.4
+pysnmp==4.4.11
+pytest==5.1.2
+PyYAML==5.1.2
+requests==2.22.0
+ruamel.yaml==0.15.100
+scp==0.13.2
+six==1.12.0
+snowballstemmer==1.9.1
+suds-jurko==0.6
+terminal==0.4.0
+textfsm==0.4.1
+toml==0.10.0
+tox==3.14.0
+traitlets==4.3.2
+typed-ast==1.4.0
+urllib3==1.25.3
+virtualenv==16.7.5
+wcwidth==0.1.7
+wrapt==1.11.2
+xmltodict==0.12.0
+zipp==0.6.0
